mdapi/objects/Ticket__c/Ticket__c.object-meta.xml
<CustomObject>
    <label>Biglietto</label>
    <nameField>
        <displayFormat>Ticket-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Biglietti</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>