mdapi/objects/Ticket__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Tipologia Spettacolo / Abbonamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeShow</valueSetName>
    </valueSet>
</CustomField>