mdapi/objects/Ticket__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>Comune</label>
    <length>255</length>
    <type>Text</type>
</CustomField>