mdapi/objects/Ticket__c/fields/CommercialValue__c.field-meta.xml
<CustomField>
    <fullName>CommercialValue__c</fullName>
    <label>Valore Commerciale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>