mdapi/objects/Ticket__c/fields/Localit__c.field-meta.xml
<CustomField>
    <fullName>Localit__c</fullName>
    <formula>City__c &amp; &quot; - &quot; &amp; Province__c &amp; &quot; - &quot; &amp; Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Località</label>
    <type>Text</type>
</CustomField>