mdapi/objects/Ticket__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prezzo</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>