mdapi/objects/Ticket__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Provincia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>