mdapi/objects/Ticket__c/fields/TicketAvailability__c.field-meta.xml
<CustomField>
    <fullName>TicketAvailability__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Offerta</label>
    <referenceTo>TicketAvailability__c</referenceTo>
    <relationshipLabel>Biglietti</relationshipLabel>
    <relationshipName>Biglietti</relationshipName>
    <type>Lookup</type>
</CustomField>