mdapi/objects/Ticket__c/fields/Uses__c.field-meta.xml
<CustomField>
    <fullName>Uses__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantità Biglietti/Abbonamenti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>