mdapi/objects/Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>IsFree__c</columns>
    <columns>TicketAvailability__c</columns>
    <columns>Price__c</columns>
    <columns>Uses__c</columns>
    <columns>Show__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>